--- a/_tweets-md/2013/2013-02-01-tweets.md
+++ b/_tweets-md/2013/2013-02-01-tweets.md
@@ -1,15 +1,21 @@
+---    
+title: "Social Media - February"
+date: "2013-02-28"
+time: 23:59:59 +0000
+---
+
 > #qotd “Success is not final, failure is not fatal: it is the courage to continue that counts.” — Winston Churchill via Nicolas Solberg
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Feb 05 06:38:13 +0000 2013](https://twitter.com/ChristopherA/status/298681919854497793)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 05 06:38:13 +0000 2013](https://twitter.com/ChristopherA/status/298681919854497793)
 
 ----
 
 > Interesting. Research shows offering freedom and choice is an influence technique, especially face-to-face:  [http://feedproxy.google.com/~r/PsychologyBlog/~3/C3QPmu0NafY/the-one-really-easy-persuasion-technique-everyone-should-know.php](http://feedproxy.google.com/~r/PsychologyBlog/~3/C3QPmu0NafY/the-one-really-easy-persuasion-technique-everyone-should-know.php)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Feb 09 19:07:30 +0000 2013](https://twitter.com/ChristopherA/status/300320035400982530)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 09 19:07:30 +0000 2013](https://twitter.com/ChristopherA/status/300320035400982530)
 
 ----
 
 > Beauty in Chaos on this Valentine's Day, via Marianna Pinchot: "Pas de Deux" [http://vimeo.com/24464538](http://vimeo.com/24464538)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 15 03:19:27 +0000 2013](https://twitter.com/ChristopherA/status/302255776305647618)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 15 03:19:27 +0000 2013](https://twitter.com/ChristopherA/status/302255776305647618)
