--- a/_tweets-md/2013/2013-04-01-tweets.md
+++ b/_tweets-md/2013/2013-04-01-tweets.md
@@ -1,15 +1,21 @@
+---    
+title: "Social Media - April"
+date: "2013-04-30"
+time: 23:59:59 +0000
+---
+
 > My latest "Community by the Numbers" blog post, on the topic of "Dyads &amp; Triads — The Smallest Teams" [http://bit.ly/17fII5G](http://bit.ly/17fII5G)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Apr 04 21:24:27 +0000 2013](https://twitter.com/ChristopherA/status/319923443044843520)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 04 21:24:27 +0000 2013](https://twitter.com/ChristopherA/status/319923443044843520)
 
 ----
 
 > Collaborating in a group of two or three people? They behave differently: "Dyads &amp; Triads—The Smallest Teams" [http://bit.ly/17fII5G](http://bit.ly/17fII5G)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Apr 05 22:14:51 +0000 2013](https://twitter.com/ChristopherA/status/320298514926153728)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 05 22:14:51 +0000 2013](https://twitter.com/ChristopherA/status/320298514926153728)
 
 ----
 
 > In Seattle today, early for BGIedu weekend intensive. Have some openings Wednesday for meetings.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Apr 08 22:19:04 +0000 2013](https://twitter.com/ChristopherA/status/321386741330227200)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 08 22:19:04 +0000 2013](https://twitter.com/ChristopherA/status/321386741330227200)
