--- a/_tweets-md/2013/2013-07-01-tweets.md
+++ b/_tweets-md/2013/2013-07-01-tweets.md
@@ -1,38 +1,44 @@
+---    
+title: "Social Media - July"
+date: "2013-07-31"
+time: 23:59:59 +0000
+---
+
 > Packing for @iosdevcamp this weekend starting tonight at #chm — video switcher, hackathon prizes, airports, printer, etc. See you soon!
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 12 20:09:52 +0000 2013](https://twitter.com/ChristopherA/status/355781071666814976)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 12 20:09:52 +0000 2013](https://twitter.com/ChristopherA/status/355781071666814976)
 
 ----
 
 > RT @pcrampton: @ChristopherA sharing the community magic at  #iOSDevCamp 
 > 
-> ![](../../media/355872382260486146-BPBKsy3CEAAwN9n.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/355872382260486146-BPBKsy3CEAAwN9n.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 13 02:12:42 +0000 2013](https://twitter.com/ChristopherA/status/355872382260486146)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 02:12:42 +0000 2013](https://twitter.com/ChristopherA/status/355872382260486146)
 
 ----
 
 > Dominic Sagolla @dom introducing our 8th(!!) #iOSDevCamp at Computer History Museum. Hackathon open to public Sun 2pm [http://twitpic.com/d2bm1u](http://twitpic.com/d2bm1u)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 13 02:19:55 +0000 2013](https://twitter.com/ChristopherA/status/355874200734547968)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 02:19:55 +0000 2013](https://twitter.com/ChristopherA/status/355874200734547968)
 
 ----
 
 > “Shall we play a game?” local activity discovery app being prototyped at #iOSDevCamp - seeking to grow hack team. [http://twitpic.com/d2h0qo](http://twitpic.com/d2h0qo)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 13 19:04:32 +0000 2013](https://twitter.com/ChristopherA/status/356127017722331136)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 19:04:32 +0000 2013](https://twitter.com/ChristopherA/status/356127017722331136)
 
 ----
 
 > RT @VentureCapIN: Dyads &amp; Triads — The Smallest Teams [http://bit.ly/13X1K13](http://bit.ly/13X1K13) @ChristopherA
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 13 20:25:46 +0000 2013](https://twitter.com/ChristopherA/status/356147461796003840)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 20:25:46 +0000 2013](https://twitter.com/ChristopherA/status/356147461796003840)
 
 ----
 
 > The “Best Sacrifice to the Demo Gods” prize returns to #iOSDevCamp for another year. Celebrating #FreedomToFail !!! [http://twitpic.com/d2hagv](http://twitpic.com/d2hagv)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 13 20:30:01 +0000 2013](https://twitter.com/ChristopherA/status/356148532568264706)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 20:30:01 +0000 2013](https://twitter.com/ChristopherA/status/356148532568264706)
 
 ----
 
@@ -40,122 +46,122 @@ Replying to [@clairecomins](https://twitter.com/clairecomins/status/356166580486
 
 > We'd love some feedback on our design so far.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 13 21:51:51 +0000 2013](https://twitter.com/ChristopherA/status/356169123652317184)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 21:51:51 +0000 2013](https://twitter.com/ChristopherA/status/356169123652317184)
 
 ----
 
 > Submit your #iOSDevCamp 2013 hackathon entry by 1pm at [http://bit.ly/12BeYKw](http://bit.ly/12BeYKw) Don't to forget to practice your &lt;3 minute demo!
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 14 17:47:23 +0000 2013](https://twitter.com/ChristopherA/status/356469989710102529)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 14 17:47:23 +0000 2013](https://twitter.com/ChristopherA/status/356469989710102529)
 
 ----
 
 > RT @kestrelsoftware: Hundreds of app makers. Dozens of prizes. Generous sponsors. Hard working volunteers. Great organizers. Best hack week…
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 15 02:40:03 +0000 2013](https://twitter.com/ChristopherA/status/356604040685162496)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 15 02:40:03 +0000 2013](https://twitter.com/ChristopherA/status/356604040685162496)
 
 ----
 
 > RT @hotpaw: Biggest applause at #iosdevcamp demo session was for a great looking new game where singing input animates a bee's movement ove…
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 15 02:40:28 +0000 2013](https://twitter.com/ChristopherA/status/356604147467952128)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 15 02:40:28 +0000 2013](https://twitter.com/ChristopherA/status/356604147467952128)
 
 ----
 
 > I appreciate everyone who attended #iOSDevCamp and the 'can do' attitude and spirit of cooperation, sharing and openness. See you next year!
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 15 17:21:37 +0000 2013](https://twitter.com/ChristopherA/status/356825894859456513)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 15 17:21:37 +0000 2013](https://twitter.com/ChristopherA/status/356825894859456513)
 
 ----
 
 > #iOSDevCamp 2013 a big success! Our first at Computer History Museum, 322 attendees and 57 hacks submitted and shown! [http://www.flickr.com/photos/56175302@N00/9288157222/](http://www.flickr.com/photos/56175302@N00/9288157222/)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 15 18:33:41 +0000 2013](https://twitter.com/ChristopherA/status/356844032044957697)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 15 18:33:41 +0000 2013](https://twitter.com/ChristopherA/status/356844032044957697)
 
 ----
 
 > I will be at #ComicCon San Diego all week. See me at Dan Cooney Art booth 5530 lobby B-2 showing Infinite PDF and my Touched graphic novel.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 17 19:03:29 +0000 2013](https://twitter.com/ChristopherA/status/357576306646450176)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 17 19:03:29 +0000 2013](https://twitter.com/ChristopherA/status/357576306646450176)
 
 ----
 
 > At #ComicCon2013 — the time travelers abound: [http://twitpic.com/d37z84](http://twitpic.com/d37z84)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 18 01:37:10 +0000 2013](https://twitter.com/ChristopherA/status/357675378489303040)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 18 01:37:10 +0000 2013](https://twitter.com/ChristopherA/status/357675378489303040)
 
 ----
 
 > Dan Cooney @DCooneyArt and I at booth 5530 #SDCC showing our first, preview edition, of our Touched graphic novel: [http://twitpic.com/d38nn7](http://twitpic.com/d38nn7)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 18 04:35:22 +0000 2013](https://twitter.com/ChristopherA/status/357720224436457475)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 18 04:35:22 +0000 2013](https://twitter.com/ChristopherA/status/357720224436457475)
 
 ----
 
 > Next year we hope to have #iOSDevCamp *after* Comic Con San Diego #sdcc so that we can have cooler prizes ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 18 07:38:46 +0000 2013](https://twitter.com/ChristopherA/status/357766380654825472)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 18 07:38:46 +0000 2013](https://twitter.com/ChristopherA/status/357766380654825472)
 
 ----
 
 > A recap of the winners at #iOSDevCamp 2013 is now posted at [http://www.iosdevcamp.org/2013/07/17/2013-winners/](http://www.iosdevcamp.org/2013/07/17/2013-winners/) — congratulations to all!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 18 07:42:39 +0000 2013](https://twitter.com/ChristopherA/status/357767354781929473)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 18 07:42:39 +0000 2013](https://twitter.com/ChristopherA/status/357767354781929473)
 
 ----
 
 > Our Infinite PDF display featuring an enhanced PDF with the Touched comic’s colors, inks, pencils &amp; commentary #sdcc [http://twitpic.com/d3cq10](http://twitpic.com/d3cq10)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 18 18:39:51 +0000 2013](https://twitter.com/ChristopherA/status/357932746586324993)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 18 18:39:51 +0000 2013](https://twitter.com/ChristopherA/status/357932746586324993)
 
 ----
 
 > Not just great costumes at Comic Con #sdcc but great team costumes… [http://twitpic.com/d3djxm](http://twitpic.com/d3djxm)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 18 23:02:06 +0000 2013](https://twitter.com/ChristopherA/status/357998742349164544)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 18 23:02:06 +0000 2013](https://twitter.com/ChristopherA/status/357998742349164544)
 
 ----
 
 > Had dinner &amp; conversation with the director, co-producers, and star of the indie SF movie Pig [http://bit.ly/17pf2le](http://bit.ly/17pf2le) [http://twitpic.com/d3f4lw](http://twitpic.com/d3f4lw)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 19 05:02:56 +0000 2013](https://twitter.com/ChristopherA/status/358089551551533056)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 19 05:02:56 +0000 2013](https://twitter.com/ChristopherA/status/358089551551533056)
 
 ----
 
 > #qotd: “Shipping beats perfection. Be open. Share your work. Anybody can fix anything.”—Khan Academy on #opensource  
 > [http://bit.ly/1buiArf](http://bit.ly/1buiArf)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 19 06:15:05 +0000 2013](https://twitter.com/ChristopherA/status/358107708911656961)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 19 06:15:05 +0000 2013](https://twitter.com/ChristopherA/status/358107708911656961)
 
 ----
 
 > You’d think with so many great costumes that you’d be blasé by Comic Con day 3. But some you just have to stop for: [http://twitpic.com/d3jguh](http://twitpic.com/d3jguh)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 19 19:24:17 +0000 2013](https://twitter.com/ChristopherA/status/358306317854711808)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 19 19:24:17 +0000 2013](https://twitter.com/ChristopherA/status/358306317854711808)
 
 ----
 
 > At tavern during Comic Com, artists sketch costumed models on the stage. Not your typical bar night. #sdcc #trickster [http://twitpic.com/d3t6zk](http://twitpic.com/d3t6zk)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 21 05:09:29 +0000 2013](https://twitter.com/ChristopherA/status/358815975556128769)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 21 05:09:29 +0000 2013](https://twitter.com/ChristopherA/status/358815975556128769)
 
 ----
 
 > Artists at Comic Con heads down sketching costumed models at bar. #sdcc #trickster #gallerygirls [http://twitpic.com/d3taao](http://twitpic.com/d3taao)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 21 05:26:57 +0000 2013](https://twitter.com/ChristopherA/status/358820371333525506)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 21 05:26:57 +0000 2013](https://twitter.com/ChristopherA/status/358820371333525506)
 
 ----
 
 > …one of the costumed #gallerygirl models the artists are sketching at #trickster while DJ works the best. #sdcc
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 21 05:29:10 +0000 2013](https://twitter.com/ChristopherA/status/358820928580358144)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 21 05:29:10 +0000 2013](https://twitter.com/ChristopherA/status/358820928580358144)
 
 ----
 
 > I'm seeking the most interesting documents that you've read in PDF form—in particular those that take advantage of the medium. Can you help?
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 29 01:30:09 +0000 2013](https://twitter.com/ChristopherA/status/361659880492380161)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 29 01:30:09 +0000 2013](https://twitter.com/ChristopherA/status/361659880492380161)
 
 ----
 
@@ -163,4 +169,4 @@ Replying to [@markmorford](https://twitter.com/markmorford/status/36164850275072
 
 > Where did that image come from? I'm working on a document on how linear thinking keeps us from solving complex problems.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 29 01:32:58 +0000 2013](https://twitter.com/ChristopherA/status/361660587685584896)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 29 01:32:58 +0000 2013](https://twitter.com/ChristopherA/status/361660587685584896)
