--- a/_tweets-md/2013/2013-08-01-tweets.md
+++ b/_tweets-md/2013/2013-08-01-tweets.md
@@ -1,21 +1,27 @@
+---    
+title: "Social Media - August"
+date: "2013-08-31"
+time: 23:59:59 +0000
+---
+
 > Working on getting Infinite PDF for the iPad out this month. Move pages around like scrabble or crosswords, add transitions and save.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 06 20:01:45 +0000 2013](https://twitter.com/ChristopherA/status/364838726192476160)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 20:01:45 +0000 2013](https://twitter.com/ChristopherA/status/364838726192476160)
 
 ----
 
 > RT @blakeburris: Great to see progress on @infinitecanvas @KatelynLyster @ChristopherA. Looking fwd to using it to tell @cleanweb story. @c…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Aug 23 22:32:55 +0000 2013](https://twitter.com/ChristopherA/status/371037360940519425)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 23 22:32:55 +0000 2013](https://twitter.com/ChristopherA/status/371037360940519425)
 
 ----
 
 > Heading to Seattle then Harmony Hill along southwestern corner of the Hood Canal for a @BGIedu faculty workshop. Looking for #collaboration.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 25 18:18:09 +0000 2013](https://twitter.com/ChristopherA/status/371698022456909824)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 25 18:18:09 +0000 2013](https://twitter.com/ChristopherA/status/371698022456909824)
 
 ----
 
 > I've always been fascinated by the ideals of permaculture. Now there are Permaculture Playing Cards on @Kickstarter [http://kck.st/199TYkb](http://kck.st/199TYkb)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 31 20:00:11 +0000 2013](https://twitter.com/ChristopherA/status/373898027263483905)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 31 20:00:11 +0000 2013](https://twitter.com/ChristopherA/status/373898027263483905)
