--- a/_tweets-md/2013/2013-11-01-tweets.md
+++ b/_tweets-md/2013/2013-11-01-tweets.md
@@ -1,72 +1,78 @@
+---    
+title: "Social Media - November"
+date: "2013-11-30"
+time: 23:59:59 +0000
+---
+
 > I'm speaking today at #GDCNext at 3:15pm on "Cooperative Gaming: Tabletop Lessons for Online Games" [http://schedule.gdcnext.com/session-id/825115](http://schedule.gdcnext.com/session-id/825115)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 05 09:10:20 +0000 2013](https://twitter.com/ChristopherA/status/397652089779666945)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 05 09:10:20 +0000 2013](https://twitter.com/ChristopherA/status/397652089779666945)
 
 ----
 
 > I just backed Lavabit's Dark Mail Initiative on @Kickstarter [http://kck.st/HrENd0](http://kck.st/HrENd0)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 05 17:09:34 +0000 2013](https://twitter.com/ChristopherA/status/397772690162872321)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 05 17:09:34 +0000 2013](https://twitter.com/ChristopherA/status/397772690162872321)
 
 ----
 
 > @followcapital I'm speaking at GDC-Next at 3:15. Do you want to talk after?
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 05 20:29:11 +0000 2013](https://twitter.com/ChristopherA/status/397822927552270336)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 05 20:29:11 +0000 2013](https://twitter.com/ChristopherA/status/397822927552270336)
 
 ----
 
 > @amyjokim My session at GDC-Next on lessons from cooperative tabletop games is today at 3:15. Meet after?
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 05 20:35:23 +0000 2013](https://twitter.com/ChristopherA/status/397824486168207360)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 05 20:35:23 +0000 2013](https://twitter.com/ChristopherA/status/397824486168207360)
 
 ----
 
 > RT @BDMontagnes: Long interview of Serge Laget and me about designing cooperative games #j2s #shadowsovercamelot [http://www.mechanics-and-meeples.com/2013/11/04/co-op-interviews-bruno-cathala-serge-laget/](http://www.mechanics-and-meeples.com/2013/11/04/co-op-interviews-bruno-cathala-serge-laget/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 06 01:09:48 +0000 2013](https://twitter.com/ChristopherA/status/397893546486665217)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 06 01:09:48 +0000 2013](https://twitter.com/ChristopherA/status/397893546486665217)
 
 ----
 
 > RT @raphkoster: Loved @amyjokim's talk on coop in digital juxtaposed with @christophera's talk on coop in tabletop! #GDCNext Low overlap, h…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 07 01:05:31 +0000 2013](https://twitter.com/ChristopherA/status/398254856340643840)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 01:05:31 +0000 2013](https://twitter.com/ChristopherA/status/398254856340643840)
 
 ----
 
 > I found @amyjokim's talk at #GDCnext on cooperative digital games useful. Some games that I'll have to add to my list to examine further.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 07 01:19:12 +0000 2013](https://twitter.com/ChristopherA/status/398258300073943040)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 01:19:12 +0000 2013](https://twitter.com/ChristopherA/status/398258300073943040)
 
 ----
 
 > Slide from @amyjokim’s talk at #GDCnext with 7 rules of design for successful non-zero-sum cooperative “co-op” games: [http://twitpic.com/dka1fv](http://twitpic.com/dka1fv)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 07 01:23:24 +0000 2013](https://twitter.com/ChristopherA/status/398259358267490304)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 01:23:24 +0000 2013](https://twitter.com/ChristopherA/status/398259358267490304)
 
 ----
 
 > This article and app intersects many of my diverse interests: "Teaching Empathy Through Digital Game Play" [http://zite.to/1b64JG9](http://zite.to/1b64JG9)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 07 01:38:12 +0000 2013](https://twitter.com/ChristopherA/status/398263080284483584)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 01:38:12 +0000 2013](https://twitter.com/ChristopherA/status/398263080284483584)
 
 ----
 
 > Slides from my #GDCnext talk "Cooperative Gaming: Tabletop Lessons for Online Games" are now available on SlideShare: [http://www.slideshare.net/ChristopherA/cooperative-gamingtabletop-lessons-for-online-games](http://www.slideshare.net/ChristopherA/cooperative-gamingtabletop-lessons-for-online-games)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 08 01:23:29 +0000 2013](https://twitter.com/ChristopherA/status/398621765284265984)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 08 01:23:29 +0000 2013](https://twitter.com/ChristopherA/status/398621765284265984)
 
 ----
 
 > RT @148Apps: Infinite PDF Review - [http://tpga.me/1fx8oOe](http://tpga.me/1fx8oOe)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 12 19:34:59 +0000 2013](https://twitter.com/ChristopherA/status/400346002227347456)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 12 19:34:59 +0000 2013](https://twitter.com/ChristopherA/status/400346002227347456)
 
 ----
 
 > RT @appletweets__: Infinite PDF Review: Business and pleasure collide in Infinite PDF - an app that lets users manipulate PDFs in... http:/…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 12 19:35:38 +0000 2013](https://twitter.com/ChristopherA/status/400346166539202560)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 12 19:35:38 +0000 2013](https://twitter.com/ChristopherA/status/400346166539202560)
 
 ----
 
@@ -74,22 +80,22 @@ Replying to [@This_Is_Mike_D](https://twitter.com/@This_Is_Mike_D/status/4002785
 
 > Thanks for the review — very timely as @KatelynLyster is pitching the app at the #Women2 conference this week in Las Vegas.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 12 19:42:00 +0000 2013](https://twitter.com/ChristopherA/status/400347766372589568)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 12 19:42:00 +0000 2013](https://twitter.com/ChristopherA/status/400347766372589568)
 
 ----
 
 > Infinite PDF is FREE today (Friday, November 15th) in celebration with the Women 2.0 conference #w2conf13 [http://bit.ly/infinitepdfapp](http://bit.ly/infinitepdfapp)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 15 15:24:14 +0000 2013](https://twitter.com/ChristopherA/status/401370062440767488)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 15 15:24:14 +0000 2013](https://twitter.com/ChristopherA/status/401370062440767488)
 
 ----
 
 > @thesweetsetup I tried to build Joel Carranza’s “Particular Pinboard” bookmarklet as you recommended it, but it doesn't build in Mavericks
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 20 08:48:27 +0000 2013](https://twitter.com/ChristopherA/status/403082399640084480)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 20 08:48:27 +0000 2013](https://twitter.com/ChristopherA/status/403082399640084480)
 
 ----
 
 > @thesweetsetup Can you just share your built bookmarklets, or fork his project on github and include the built bookmarklets?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 20 08:49:46 +0000 2013](https://twitter.com/ChristopherA/status/403082731195625472)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 20 08:49:46 +0000 2013](https://twitter.com/ChristopherA/status/403082731195625472)
