--- a/_tweets-md/2013/2013-09-01-tweets.md
+++ b/_tweets-md/2013/2013-09-01-tweets.md
@@ -1,3 +1,9 @@
+---    
+title: "Social Media - September"
+date: "2013-09-30"
+time: 23:59:59 +0000
+---
+
 > As we reach the end of a solid draft of our book on the Design of Cooperative Games, we are seeking a good title. Any outside-the-box ideas?
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 01 02:16:08 +0000 2013](https://twitter.com/ChristopherA/status/384864274226499586)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 01 02:16:08 +0000 2013](https://twitter.com/ChristopherA/status/384864274226499586)
