--- a/_tweets-md/2014/2014-08-01-tweets.md
+++ b/_tweets-md/2014/2014-08-01-tweets.md
@@ -1,24 +1,30 @@
+---    
+title: "Social Media - August"
+date: "2014-08-31"
+time: 23:59:59 +0000
+---
+
 > RT @Dangerangel: @EbayAllNews: Register for iOSDevCamp [http://zipzip.it/?url=http://dlvr.it/6X68vw](http://zipzip.it/?url=http://dlvr.it/6X68vw) #iOS8 #iosdev  #iPhone6 #iosapp #iOS8Beta5 #IoT #arduino #Int…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Aug 07 03:36:52 +0000 2014](https://twitter.com/ChristopherA/status/497224830236622848)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 07 03:36:52 +0000 2014](https://twitter.com/ChristopherA/status/497224830236622848)
 
 ----
 
 > @spacekatgal There are Apple events with more diversity — #iOSDevCamp has been focusing on it for several years: [https://www.youtube.com/watch?v=o9jIfvG8hUY](https://www.youtube.com/watch?v=o9jIfvG8hUY)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 09 06:16:35 +0000 2014](https://twitter.com/ChristopherA/status/497989799920562176)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 09 06:16:35 +0000 2014](https://twitter.com/ChristopherA/status/497989799920562176)
 
 ----
 
 > RT @dom: Register now for @iOSDevCamp, “hands down the best hackathon” two weeks from today! [http://j.mp/2014iDC](http://j.mp/2014iDC) #hardware #ios #apple #…
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 09 19:16:02 +0000 2014](https://twitter.com/ChristopherA/status/498185957997174784)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 09 19:16:02 +0000 2014](https://twitter.com/ChristopherA/status/498185957997174784)
 
 ----
 
 > @Scobleizer This year's [http://iOSDevCamp2014.org](http://iOSDevCamp2014.org) looks to be great with intersection of Internet of Things—you were at our first one. Join us?
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Aug 15 00:13:34 +0000 2014](https://twitter.com/ChristopherA/status/500072774111469568)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 15 00:13:34 +0000 2014](https://twitter.com/ChristopherA/status/500072774111469568)
 
 ----
 
@@ -26,47 +32,47 @@ Replying to [@whoisrae, @banane and @hazmatzo](https://twitter.com/raebonfanti/s
 
 > There is still a discount for women to attend #iOSDevCamp [https://iosdevcamp2014.eventbrite.com/?discount=ios2014women_506](https://iosdevcamp2014.eventbrite.com/?discount=ios2014women_506)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 17 21:30:25 +0000 2014](https://twitter.com/ChristopherA/status/501118879934857219)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 17 21:30:25 +0000 2014](https://twitter.com/ChristopherA/status/501118879934857219)
 
 ----
 
 > RT @sujamthe: Excited about iOSDevCamp 2014 -next weekend - [https://iosdevcamp2014.eventbrite.com/?ref=ecounttw](https://iosdevcamp2014.eventbrite.com/?ref=ecounttw)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 17 21:30:39 +0000 2014](https://twitter.com/ChristopherA/status/501118934901202944)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 17 21:30:39 +0000 2014](https://twitter.com/ChristopherA/status/501118934901202944)
 
 ----
 
 > RT @ThingsExpo: “@MatthewJosef: We'd love to see people hacking #WebRTC for #IoT @iOSDevCamp in 8 days!  
 > [http://iosdevcamp2014.org”](http://iosdevcamp2014.org”) [http://t.co…](http://t.co…)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 17 21:30:46 +0000 2014](https://twitter.com/ChristopherA/status/501118964894666752)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 17 21:30:46 +0000 2014](https://twitter.com/ChristopherA/status/501118964894666752)
 
 ----
 
 > RT @MerlinChauffeur: Convergence, colloboration @iOSDevCamp on-site overnight. Best hackathon ever just got better! [http://www.iosdevcamp.org](http://www.iosdevcamp.org)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 17 22:51:44 +0000 2014](https://twitter.com/ChristopherA/status/501139340030779393)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 17 22:51:44 +0000 2014](https://twitter.com/ChristopherA/status/501139340030779393)
 
 ----
 
 > RT @SJSU_ID: There's an #IoT Hackathon in San Jose next week. Check it out! [http://iosdevcamp2014.org](http://iosdevcamp2014.org) @iOSDevCamp
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 17 22:52:02 +0000 2014](https://twitter.com/ChristopherA/status/501139415867998209)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 17 22:52:02 +0000 2014](https://twitter.com/ChristopherA/status/501139415867998209)
 
 ----
 
 > Pitch at #iOSDevCamp by 10-year old Yash Narayan for iOS app “bully shutter”. We look forward to seeing it on Sunday! [http://moby.to/uilv9h](http://moby.to/uilv9h)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 23 03:05:58 +0000 2014](https://twitter.com/ChristopherA/status/503015261616631808)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 23 03:05:58 +0000 2014](https://twitter.com/ChristopherA/status/503015261616631808)
 
 ----
 
 > RT @erico: Some people have just one, small vice.   
 > @fryselectronics @iOSDevCamp 
 > 
-> ![](../../media/503248555444674560-BvviFFoCAAAreyf.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/503248555444674560-BvviFFoCAAAreyf.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 23 18:33:00 +0000 2014](https://twitter.com/ChristopherA/status/503248555444674560)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 23 18:33:00 +0000 2014](https://twitter.com/ChristopherA/status/503248555444674560)
 
 ----
 
@@ -74,58 +80,58 @@ Replying to [@whoisrae, @banane and @hazmatzo](https://twitter.com/raebonfanti/s
 > Hacker Bus   
 > to #GDCNext in LA"
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 23 18:33:47 +0000 2014](https://twitter.com/ChristopherA/status/503248755835940864)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 23 18:33:47 +0000 2014](https://twitter.com/ChristopherA/status/503248755835940864)
 
 ----
 
 > We are at #iOSDevCamp hackathon trying to get @mbientLab’s #metawear hardware working. Challenged by soldering battery and haptic. Join us?
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 23 21:30:17 +0000 2014](https://twitter.com/ChristopherA/status/503293173376897025)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 23 21:30:17 +0000 2014](https://twitter.com/ChristopherA/status/503293173376897025)
 
 ----
 
 > Printing cases for @mbientLab’s new #metawear wearable @ #iOSDevCamp #hackathon. #Kickstarter shipping now! #Series1 [http://twitpic.com/eanmw5](http://twitpic.com/eanmw5)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 23 22:06:34 +0000 2014](https://twitter.com/ChristopherA/status/503302303776923649)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 23 22:06:34 +0000 2014](https://twitter.com/ChristopherA/status/503302303776923649)
 
 ----
 
 > Submit your #iOSDevCamp2014 hacks for this afternoon's #hackathon showcase. Deadline NOON PDT. [http://bit.ly/iosdevcamp2014submithack](http://bit.ly/iosdevcamp2014submithack)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 24 18:10:06 +0000 2014](https://twitter.com/ChristopherA/status/503605180634382337)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 24 18:10:06 +0000 2014](https://twitter.com/ChristopherA/status/503605180634382337)
 
 ----
 
 > Update on Friday's pitch at #iOSDevCamp by 10-year old Yash Narayan—he hacked it! iOS app “Bully Watch" #hackathon [http://moby.to/hst1fq](http://moby.to/hst1fq)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 24 22:15:47 +0000 2014](https://twitter.com/ChristopherA/status/503667011369447424)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 24 22:15:47 +0000 2014](https://twitter.com/ChristopherA/status/503667011369447424)
 
 ----
 
 > It was a great pleasure to see all the innovation, collaboration, and "can do" attitude at #iOSDevCamp — thank you everyone for joining us!
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Aug 25 06:39:57 +0000 2014](https://twitter.com/ChristopherA/status/503793888838959104)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 25 06:39:57 +0000 2014](https://twitter.com/ChristopherA/status/503793888838959104)
 
 ----
 
 > We are in process of posting winners of last night's #iOSDevCamp #hackathon. If you have updates (web, video link, etc) please contact me!
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Aug 25 22:31:46 +0000 2014](https://twitter.com/ChristopherA/status/504033418582044672)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 25 22:31:46 +0000 2014](https://twitter.com/ChristopherA/status/504033418582044672)
 
 ----
 
 > The winners of this year's #iOSDevCamp #hackathon show have been posted [http://www.iosdevcamp.org/2014/08/25/iosdevcamp-2014-winners/](http://www.iosdevcamp.org/2014/08/25/iosdevcamp-2014-winners/) — Congratulations!
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 26 16:47:11 +0000 2014](https://twitter.com/ChristopherA/status/504309091188375552)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 26 16:47:11 +0000 2014](https://twitter.com/ChristopherA/status/504309091188375552)
 
 ----
 
 > RT @ritun: @ChristopherA Thanks for supporting Yash. He will cherish the experience and this winning picture! [http://bit.ly/1peJHy2](http://bit.ly/1peJHy2)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 26 23:09:53 +0000 2014](https://twitter.com/ChristopherA/status/504405399399723010)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 26 23:09:53 +0000 2014](https://twitter.com/ChristopherA/status/504405399399723010)
 
 ----
 
 > Winner of #iOSDevCamp's #hackathon's "Best Hardware Hack is "TypeA Go Mount". I'm looking forward to getting one! [http://youtu.be/_bxhJ_re50c](http://youtu.be/_bxhJ_re50c)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Aug 27 04:07:05 +0000 2014](https://twitter.com/ChristopherA/status/504480193881206784)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 27 04:07:05 +0000 2014](https://twitter.com/ChristopherA/status/504480193881206784)
