--- a/_tweets-md/2014/2014-11-01-tweets.md
+++ b/_tweets-md/2014/2014-11-01-tweets.md
@@ -1,7 +1,13 @@
+---    
+title: "Social Media - November"
+date: "2014-11-30"
+time: 23:59:59 +0000
+---
+
 > RT @matthewjosef: #Snowden just gave an interview where he encouraged people to use silent circle.   
 >   
 > [http://techcrunch.com/2014/10/11/edward-snowden-new-yorker-festival/?ncid=rss&cps=gravity](http://techcrunch.com/2014/10/11/edward-snowden-new-yorker-festival/?ncid=rss&cps=gravity)  
 >   
 > @Blackphone_ch…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 27 00:39:25 +0000 2014](https://twitter.com/ChristopherA/status/537767617507766273)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 27 00:39:25 +0000 2014](https://twitter.com/ChristopherA/status/537767617507766273)
